--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "things-dialog-resize-behavior",
-  "version": "v2.2.0",
+  "version": "v2.2.1",
   "authors": [
-    "Hatio Lab. <heartyoh@hatiolab.com>"
+    "Shenzhen Weixun"
   ],
   "description": "An element providing Dialog Resize functions",
   "keywords": [
@@ -11,8 +11,6 @@
     "seed"
   ],
   "main": "things-dialog-resize-behavior.html",
-  "license": "http://license.hatiolab.com/EULA",
-  "homepage": "http://elements.hatiolab.com/",
   "ignore": [
     "/.*",
     "/test/"
